--- a/css/main.css
+++ b/css/main.css
@@ -1,63 +1,225 @@
+/* border color rgb(58, 58, 58); */
 header {
   font-size: 15px;
   font-style: bold;
   text-align: center;
 }
+
 body {
-  color: black; /*#dce3ed;*/
-  background-color: white; /*#3e4651;*/
+  color: white;
+  font-family: Helvetica, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgb(12, 12, 12);
   font-family: Arial;
   margin: 0;
   padding: 0;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  height: 100vh;
 }
 
-table input {
-  background-color: white; /*#627287;*/
+header{
+  background-color: #222;
+  border-right: .8px solid rgb(58, 58, 58);
 }
-table td button {
-  background-color: #627287;
-}
-
-.navbar {
-  font-size: 20px;
-  overflow: hidden;
-  background-color: #333;
-}
-
-.navbar a {
-  float: left;
-  display: block;
-  color: white; /*#dce3ed;*/
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.row {
+nav{
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: left;
+  text-align: left;
+  padding-left: 10px;
 }
 
-.content {
-  flex: 30%;
-  background-color: white; /*#3e4651;*/
-  padding: 50px;
-}
-select {
-  font-size: 15px;
-}
-option {
-  font-size: 15px;
-}
-a:hover {
-  color: blue;
-}
-p {
-  font-size: 15px;
+.navbar{
+  display: flex;
+  flex-direction: column;
+  flex:1;
 }
 
+nav a{
+  text-decoration: none;
+  font-weight: 700;
+  color: white;
+  text-underline-offset: 6px;
+  padding: 8px 0;
+  align-items: center;
+  display: flex;
+  gap: 10px;
+}
+
+nav a:hover{
+  text-decoration: underline;
+  transition: .2s;
+}
+
+.main-title{
+  font-weight: lighter;
+}
+
+main{
+  margin: 0 20px;
+  overflow-y: scroll;
+}
+
+.cards-holder{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 15px;
+}
+
+.card{
+  cursor: pointer;
+}
+
+.card:hover{
+  transform: translateY(5%);
+  transition: .2s ease-in-out;
+}
+
+
+
+.card:nth-child(1){
+  background-color: #133b5c;
+}
+
+.card:nth-child(2){
+  background-color: #5c1352;
+}
+
+.card:nth-child(3){
+  background-color: #135c50;
+}
+
+.card:nth-child(4){
+  background-color: #d8d8d8;
+}
+
+.card{
+  padding: 10px;
+  border: .7px solid rgb(41, 41, 41);
+}
+
+.reports{
+  margin-top: 40px;
+}
+
+.reports .card{
+  color: white;
+  background-color: rgb(30, 30, 31);
+}
+
+.reports .card:hover{
+  transform: translateY(0%);
+}
+
+.reports table{
+  width: 100%;
+  text-align: left;
+  font-size: 18px;
+  border-spacing: 10px;
+}
+
+.reports thead{
+  font-size: 20px;
+  text-transform: capitalize;
+  margin-bottom: 10px;
+  
+}
+
+.logout-btn{
+  position: absolute;
+  bottom:10px;
+  display: flex;
+  align-items: center;
+}
+
+.logout-btn a {
+  color: red;
+}
+
+
+input[type="text"],
+input[type="password"],
+input[type="number"],
+input[type="email"],
+select{
+    border: 0.6px solid rgb(49, 49, 49);
+    padding: 6px 8px;
+    border-radius: 3px;
+    background-color:rgb(12, 12, 12);
+    color: white;
+    font-size: 15px;
+}
+input[type="text"]:hover,
+input[type="password"]:hover,
+input[type="number"]:hover,
+input[type="email"]:hover,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus{
+    border-color: seagreen;
+}
+
+input[type="submit"], button{
+    padding: 6px 8px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    background-color:seagreen ;
+    color: white;
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+input[type="submit"]:hover, button:hover{
+    background-color: green;
+    transition: .4s;
+}
+
+label{
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+table{
+  width: 100%;
+  text-align: left;
+  margin: 10px 2px;
+}
+
+thead{
+  text-align: left;
+  border-top: 1px solid white;
+}
+
+
+form{
+  padding: 15px;
+  background-color: rgb(30, 30, 31);
+}
+
+.form-child{
+  max-width: 240px;
+  display: flex;
+  flex-direction: column;
+}
+
+.admin-add{
+  display:flex;
+}
+
+.input-type-child,
+.input-holder{
+    display: flex;
+    flex-direction: column;
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+
+delete-form{
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+}
